--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,22 @@
 main {
-    min-height: 80vh;
+  min-height: 80vh;
+}
+
+.logo {
+  gap: 10px;
+}
+
+.logo img {
+  height: 50px !important;
+  width: 50px;
+}
+
+@media screen and (max-width: 767px) {
+  .logo {
+    margin-bottom: 15px;
+  }
+
+  .mobile {
+    justify-content: center !important;
+  }
 }
